<resources>
    <string name="app_name">Everything Store</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="nav_open" translatable="false">Open</string>
    <string name="nav_close" translatable="false">Close</string>
    <string name="Buyer">Buyer</string>
    <string name="Seller">Seller</string>
    <string name="Choose_Language">Choose Language</string>
    <string name="Select">Select</string>
    <string name="Phone_Number">Phone Number</string>
    <string name="Register">Register</string>
    <string name="Get_OTP">Get OTP</string>
    <string name="Enter_the_OTP_sent_to">Enter the OTP sent to</string>
    <string name="Resend_OTP">Resend OTP</string>
    <string name="Confirm_OTP">Confirm OTP</string>
    <string name="enter_the_otp_sent_to">Enter the OTP sent to</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="Demo_account_enable_disable">Demo account enable / disable</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_no">Phone No.</string>
    <string name="name">Name</string>
    <string name="address_line">Address line</string>
    <string name="city">City</string>
    <string name="pincode">Pincode</string>
    <string name="state">State</string>
    <string name="sign_up">Sign Up</string>
    <string name="profile">Profile</string>
    <string name="Buy_Items">Buy Items</string>
    <string name="Your_Orders">Your Orders</string>
    <string name="cart">Cart</string>
    <string name="Sign_out">Sign Out</string>
    <string name="Total">Total</string>
    <string name="Checkout">Checkout</string>
    <string name="Empty_cart">Empty Cart</string>
    <string name="In_stock">In stock</string>
    <string name="Sell_Items">Sell Items</string>
    <string name="Your_Items">Your Items</string>
    <string name="History">History</string>
    <string name="Add_Items">Add Items</string>
    <string name="Add_Item">Add Item</string>
    <string name="Item_Name">Item Name</string>

    <string name="Item_Description">Item Description</string>
    <string name="Sizes_Available">Sizes Available</string>
    <string name="Item_Cost">Item Cost</string>
    <string name="Item_quantity">Item Quantity</string>
    <string name="Delete_Listing">Delete Listing</string>
    <string name="Enter_valid_pincode">Enter valid pincode!</string>
    <string name="Check_phone_number">Check phone number</string>
    <string name="Check_name">Name should contain alphabets only</string>
    <string name="Check_Address">Check address should be more than 5 characters</string>
    <string name="Check_State">Check state length should be greater than 3 characters</string>
    <string name="Check_city">Check city length is more than 3 characters</string>
    <string name="Login">Login</string>
    <string name="PrefsSellerNameRegister">sellerNameRegister</string>
    <string name="PrefsSellerPhoneRegister">sellerPhoneRegister</string>
    <string name="PrefsSellerName">SellerName</string>
    <string name="PrefsSellerPhone">SellerPhone</string>

    <string name="PrefsBuyerNameRegister">buyerNameRegister</string>
    <string name="PrefsBuyerPhoneRegister">buyerPhoneRegister</string>
    <string name="PrefsBuyerName">BuyerName</string>
    <string name="PrefsBuyerPhone">BuyerPhone</string>

</resources>