<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home_screen.HomeActivity"
    android:background="@color/white">

    <ImageButton
        android:id="@+id/buyer_button_home"
        android:layout_width="138dp"
        android:layout_height="143dp"
        android:layout_marginTop="176dp"
        android:background="@drawable/ic_buyer_graphic"
        android:foregroundGravity="center_vertical|center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageButton
        android:id="@+id/seller_button_home"
        android:layout_width="135dp"
        android:layout_height="150dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/seller_graphic"
        android:foregroundGravity="center_vertical|center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buyer_textView_home"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/buyer_textView_home"
        android:layout_width="149dp"
        android:layout_height="24dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/Buyer"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buyer_button_home" />

    <TextView
        android:id="@+id/seller_textView_home"
        android:layout_width="149dp"
        android:layout_height="24dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/Seller"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seller_button_home" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="196dp"
        android:layout_marginBottom="41dp"
        android:text="@string/Choose_Language"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seller_textView_home" />

    <Button
        android:id="@+id/language_change_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="188dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginBottom="25dp"
        android:text="@string/Select"
        android:textColor="#FFFFFF"
        app:backgroundTint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.826"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/seller_textView_home" />
</androidx.constraintlayout.widget.ConstraintLayout>