<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".seller.post_login.AddItems.AddItems">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView6"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:cardBackgroundColor="#000000"
        app:cardElevation="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="12dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/Seller"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="173dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="173dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/Add_Items"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView6" />

    <ImageView
        android:id="@+id/add_item_image_view"
        android:layout_width="350dp"
        android:layout_height="263dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="31dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        tools:src="@drawable/tshirt2" />

    <ImageButton
        android:id="@+id/add_image_in_add_item"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="256dp"
        android:layout_marginEnd="4dp"
        android:backgroundTint="#FFFFFF"
        android:scaleType="centerCrop"
        android:src="@drawable/add_image_in_add_item_seller"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="52dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_item_image_view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/item_name_add_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:ems="10"
                android:hint="@string/Item_Name"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColor="#000000"
                android:textColorHint="#9C9C9C" />

            <EditText
                android:id="@+id/Item_desc_add_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:hint="@string/Item_Description"
                android:inputType="textMultiLine"
                android:minHeight="48dp"
                android:minLines="2"
                android:scrollbars="vertical"
                android:textColor="#000000"
                android:textColorHint="#9C9C9C" />

            <EditText
                android:id="@+id/item_sizes_add_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:ems="10"
                android:hint="@string/Sizes_Available"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColor="#000000"
                android:textColorHint="#9C9C9C"
                />

            <EditText
                android:id="@+id/item_cost_add_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:ems="10"
                android:hint="@string/Item_Cost"
                android:inputType="number"
                android:minHeight="48dp"
                android:textColor="#000000"
                android:textColorHint="#9C9C9C" />

            <EditText
                android:id="@+id/item_quantity_add_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:ems="10"
                android:hint="@string/Item_quantity"
                android:text="1"
                android:inputType="number"
                android:minHeight="48dp"
                android:textColor="#000000"
                android:textColorHint="#9C9C9C"
                android:visibility="invisible"/>

            <Button
                android:id="@+id/add_button_add_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="4dp"
                android:background="@color/black"
                android:textColor="@color/white"
                android:text="@string/Add_Item"
                />

        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/add_item_progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="348dp"
        android:progressTint="#050505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cardView6" />

    <ImageButton
        android:id="@+id/next_image_add_item"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginEnd="75dp"
        android:adjustViewBounds="true"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        app:layout_constraintEnd_toStartOf="@+id/add_image_in_add_item"
        app:layout_constraintTop_toBottomOf="@+id/add_item_image_view"
        app:srcCompat="@drawable/next_image_icon" />

    <ImageButton
        android:id="@+id/prev_image_add_item"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="107dp"
        android:layout_marginEnd="23dp"
        android:adjustViewBounds="true"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        app:layout_constraintEnd_toStartOf="@+id/next_image_add_item"
        app:layout_constraintStart_toEndOf="@+id/add_item_progressBar"
        app:layout_constraintTop_toBottomOf="@+id/add_item_image_view"
        app:srcCompat="@drawable/prev_image_icon" />

</androidx.constraintlayout.widget.ConstraintLayout>